# modular_controller

./: CMakeLists.txt  README.md  hand_pose_data.csv  hand_pose_data_RNN.csv  hand_pose_data_with_labels.csv  mi_modelo_rnn.h5  modelo_rnn.onnx  package.xml
include/modular_controller/: modular_controller.h
launch/: modular_controller.launch  modular_controller_left.launch
src/: ONNX_test.cpp  RNN.py  RNN_a_ONNX.py  gripper_test.cpp  hand_pose_test.cpp  joints_limits.cpp  kalman  kalman.cpp  mi_modelo_rnn.keras  modular_controller.cpp  modular_controller_twoHands.cpp  servos_test.cpp
