<?xml version="1.0"?>
<package format="2">
  <name>modular_controller</name>
  <version>1.0.0</version>
  <description>
    Controlador utilizado para modular
  </description>
  <maintainer email="diegofranco7043@alumnos.udg.mx">Diego Franco</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>open_manipulator_msgs</depend>
</package>
